Fix api path
